--- a/mini-vuex-router/index.html
+++ b/mini-vuex-router/index.html
@@ -10,6 +10,10 @@
         margin:0;
         padding:20px;
       }
+
+      html,body{
+        font-family: serif;
+      }
     </style>
   </head>
   <body>
